// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiselect (isCI = false) > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can render option hints 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0 [2m(Hint 0)[22m",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can set cursorAt to preselect an option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[2B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can set custom labels 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m Option 0
[36m│[39m  [2m◻[22m [2mOption 1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m Option 0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can set initial values 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [32m◼[39m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can submit without selection when required = false 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mnone[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > maxItems renders a sliding window 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[4B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[5B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt6",
  "[4B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt6[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > renders multiple cancelled values 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[4B",
  "[999D[6A",
  "[2B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m[2m, [22m[9m[2mopt1[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > renders multiple selected options 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[4B",
  "[999D[6A",
  "[2B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[3B",
  "[999D[6A",
  "[3B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m└[39m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > renders validation errors 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[33m▲[39m  foo
[33m│[39m  [36m◻[39m opt0
[33m│[39m  [2m◻[22m [2mopt1[22m
[33m└[39m  [33mPlease select at least one option.[39m
[0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > shows hints for all selected options 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [32m◼[39m [2mopt1[22m [2m(Hint 1)[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[2B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt0[22m [2m(Hint 0)[22m
[36m│[39m  [32m◼[39m opt1 [2m(Hint 1)[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[3B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt1[22m [2m(Hint 1)[22m
[36m│[39m  [36m◻[39m opt2 [2m(Hint 2)[22m
[36m└[39m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > sliding window loops downwards 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[4B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [36m◻[39m opt7
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [36m◻[39m opt8
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [36m◻[39m opt9
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "[999D[9A",
  "[5B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [36m◻[39m opt10
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "[999D[9A",
  "[6B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[7B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > sliding window loops upwards 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "[999D[9A",
  "[7B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt11",
  "[2B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt11[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can render option hints 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0 [2m(Hint 0)[22m",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can set cursorAt to preselect an option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[2B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can set custom labels 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m Option 0
[36m│[39m  [2m◻[22m [2mOption 1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m Option 0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can set initial values 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [32m◼[39m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can submit without selection when required = false 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mnone[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > maxItems renders a sliding window 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[4B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[5B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt6",
  "[4B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt6[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > renders multiple cancelled values 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[4B",
  "[999D[6A",
  "[2B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m[2m, [22m[9m[2mopt1[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > renders multiple selected options 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[4B",
  "[999D[6A",
  "[2B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt1",
  "[3B",
  "[999D[6A",
  "[3B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m└[39m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > renders validation errors 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[33m▲[39m  foo
[33m│[39m  [36m◻[39m opt0
[33m│[39m  [2m◻[22m [2mopt1[22m
[33m└[39m  [33mPlease select at least one option.[39m
[0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > shows hints for all selected options 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [32m◼[39m [2mopt1[22m [2m(Hint 1)[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[2B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt0[22m [2m(Hint 0)[22m
[36m│[39m  [32m◼[39m opt1 [2m(Hint 1)[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "[999D[6A",
  "[3B",
  "[J",
  "[36m│[39m  [32m◼[39m [2mopt1[22m [2m(Hint 1)[22m
[36m│[39m  [36m◻[39m opt2 [2m(Hint 2)[22m
[36m└[39m
",
  "[999D[6A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > sliding window loops downwards 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[4B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [36m◻[39m opt7
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [36m◻[39m opt8
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[3B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [36m◻[39m opt9
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "[999D[9A",
  "[5B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [36m◻[39m opt10
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "[999D[9A",
  "[6B",
  "[J",
  "[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt0",
  "[7B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > sliding window loops upwards 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "[999D[9A",
  "[2B",
  "[J",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "[999D[9A",
  "[7B",
  "[2K[G",
  "[36m│[39m  [32m◼[39m opt11",
  "[2B",
  "[999D[9A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt11[22m",
  "
",
  "[?25h",
]
`;
